2006-06-19  Jim Meyering  <jim@meyering.net>

	* Makefile.cfg (local-checks-to-skip): Add changelog-check,
	so this check is not run as part of "make distcheck".

2006-06-18  Bob Proulx  <bob@proulx.com>  (tiny change)

	* tests/misc/pwd-long: Fix typo (s/neq/ne/) in previous change.

2006-06-18  Jim Meyering  <jim@meyering.net>

	* tests/misc/pwd-long: Make error output a little clearer.

2006-06-17  Jim Meyering  <jim@meyering.net>

	* tests/rm/inaccessible: Skip this test on systems without openat
	support.  Reported by Bob Proulx.

2006-06-15  Bob Proulx  <bob@proulx.com>  (tiny change)

	* tests/misc/mknod: Improve permission checks to handle
	running mkdir test in set-gid directories.

2006-06-14  Jim Meyering  <jim@meyering.net>

	* tests/du/basic: Revamp not to hard-code file system block sizes.

2006-06-12  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* tests/du/Makefile.am (TESTS_ENVIRONMENT): Pass $(PERL), for
	files0-from test.

2006-06-11  Jim Meyering  <jim@meyering.net>

	* .gitignore: New file.
	* Makefile.am (EXTRA_DIST): Add .gitignore.

	Setting TIME_STYLE=long-iso in the environment would make the
	cp/same-file test fail.
	* tests/envvar-check (vars): Add TIME_STYLE to the list.
	* tests/cp/same-file: Revert last change.
	Source the envvar-check script, to ensure that TIME_STYLE
	settings don't affect these tests.

2006-06-11  Paul Eggert  <eggert@cs.ucla.edu>

	* tests/cp/same-file: Execute 'ls' in the C locale, so that it
	uses POSIX time stamp formats.  Problem reported by John Nixon in
	<http://lists.gnu.org/archive/html/bug-coreutils/2006-06/msg00062.html>.

2006-06-10  Jim Meyering  <jim@meyering.net>

	* NEWS: Mention the AIX-strndup-bug vs. dircolors workaround.

	Require a "Version N.M" line at the top of the ChangeLog
	file only when making the actual release, not when running
	"make distcheck".
	* Makefile.maint (maintainer-distcheck): Don't depend on
	changelog-check.
	(alpha beta major): Depend on it here, instead.
